[package]
name = "ColorMusicRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
wasapi = "0.14.0"
winping = "0.10.1"
